# smart-meter-prototype

./: .gitignore  ClientSide.py  Clienttest.py  README.md  haproxy.cfg
Certificates/: haproxy.pem  server.crt
smart-meter-server/: Cargo.toml
smart-meter-server/mock-database/: Cargo.toml
smart-meter-server/mock-database/src/: connection_context.rs  lib.rs
smart-meter-server/mock-database/src/mock/: mod.rs  test.rs
smart-meter-server/src/: main.rs  mock.rs
