[package]
name = "sm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
tokio = { version = "1.40.0", features = ["full", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.132"
tokio-util = { version = "0.7.12", features = ["codec"] }
tokio-stream = "0.1.16"
futures = "0.3.31"
tokio-test = "0.4.4"
bytes = "1.8.0"
serde = { version = "1.0.213", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
mock-database = { path = "./mock-database/" }
bcrypt = "0.16.0"
rand = "0.8.5"
